build_icy2.txt
Picked up JAVA_TOOL_OPTIONS: -Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8
Reusing configuration cache.
> Task :jarJar NO-SOURCE
> Task :processTestResources NO-SOURCE
> Task :processResources UP-TO-DATE
> Task :createMinecraftArtifacts UP-TO-DATE

> Task :compileJava
C:\Users\dev\MCreatorWorkspaces\drakonis\src\main\java\net\mcreator\drakonis\item\IcyGlovesItem.java:21: error: cannot find symbol
			.setId(ResourceLocation.fromNamespaceAndPath("drakonis", "icy_gloves")));
			^
  symbol:   method setId(ResourceLocation)
  location: class Properties
Note: C:\Users\dev\MCreatorWorkspaces\drakonis\src\main\java\net\mcreator\drakonis\procedures\EmberDominionTickProcedure.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///C:/Users/dev/MCreatorWorkspaces/drakonis/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\dev\MCreatorWorkspaces\drakonis\src\main\java\net\mcreator\drakonis\procedures\EmberDominionTickProcedure.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\dev\MCreatorWorkspaces\drakonis\src\main\java\net\mcreator\drakonis\item\IcyGlovesItem.java:21: error: cannot find symbol
  			.setId(ResourceLocation.fromNamespaceAndPath("drakonis", "icy_gloves")));
  			^
    symbol:   method setId(ResourceLocation)
    location: class Properties
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 5s
3 actionable tasks: 1 executed, 2 up-to-date
Configuration cache entry reused.
